--- a/assessment.html
+++ b/assessment.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="twitter:card" content="summary">
   <meta property="og:url" content="https://03sk08.github.io/assessment/assessment.html">
-  <,eta property="og:description" content="N予備校プログラミング入門コースで製作した、「あなたのいいところ診断」サイトです。">
+  <meta property="og:description" content="N予備校プログラミング入門コースで製作した、「あなたのいいところ診断」サイトです。">
   <link rel="stylesheet" href="assessment.css">
   <title>あなたのいいところ診断</title>
 </head>
